--- a/package.json
+++ b/package.json
@@ -30,8 +30,9 @@
     "ng2-toasty": "^4.0.3",
     "primeng": "^5.2.4",
     "rxjs": "^5.5.6",
-    "zone.js": "^0.8.19",
-
+    "zone.js": "^0.8.19"
+  },
+  "devDependencies": {
     "@angular/cli": "^1.7.4",
     "@angular/compiler-cli": "^5.2.0",
     "@angular/language-service": "^5.2.0",
@@ -50,8 +51,6 @@
     "ts-node": "~4.1.0",
     "tslint": "~5.9.1",
     "typescript": "~2.5.3"
-  },
-  "devDependencies": {
   },
   "engines": {
     "node": "9.4.0",
